<resources>
    <string name="app_name">IMC</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="altura_m">Altura (m)</string>
    <string name="genero">Gênero</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="calcular">Calcular</string>
    <string name="baixoPesoMuitoGrave">Baixo peso muito grave</string>
    <string name="baixoPesoGrave">Baixo peso grave</string>
    <string name="baixoPeso">Baixo peso</string>
    <string name="pesoNormal">Peso normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidadegrauI">Obesidade grau I</string>
    <string name="obesidadegrauII">Obesidade grau II</string>
    <string name="obesidadegrauIII">Obesidade grau III</string>


</resources>
