<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peso_kg" />

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altura_m" />

    <EditText
        android:id="@+id/et_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero" />

    <RadioGroup
        android:id="@+id/rg_genero"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_masculino"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"></RadioButton>

        <RadioButton
            android:id="@+id/rb_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/feminino">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        />



</LinearLayout>